--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					<br>
 					Email: pelenjiang [at] whu [dot] edu [dot] cn
 				</p>
-				<p> <img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+				<p> <a href="https://scholar.google.com/citations?hl=en&user=Yn14dPkAAAAJ"><img src="./pic/google_scholar.png" 
+					height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/PelenJiang"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
