--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					Wuhan University  (武汉大学) <br>
 					Wuhan, Hubei Province<br>
 					<br>
-					Email: pelenjiang [at] whu [dot] edu [dot] cn
+					Email: pelenjiang@whu.edu.cn
 				</p>
 				<p> <a href="https://scholar.google.com/citations?hl=en&user=Yn14dPkAAAAJ"><img src="./pic/google_scholar.png" 
 					height="30px" style="margin-bottom:-3px"></a>
@@ -76,11 +76,12 @@
 <h2>Publications </h2>
 <table id="tbPublications" width="100%">
 	<tbody>
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-	<tr>&nbsp</tr>
-
-	<tr>&nbsp</tr>
+	<tr>&nbsp
+</tr>
+    	<tr>&nbspA Context-Guided Attention Method for Integrating Features of Histopathological Patches</tr>
+	<tr>&nbspZhiqun Zuo, Juan Liu, Peng Jiang, Yuqi Chen, Dehua Cao, Baochuan Pang.</tr>
+	<tr>&nbspUnder review in IET Image Processing.</tr>
+		
     <tr>&nbsp</tr>
     <tr>&nbsp</tr>
 
