--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 <h2>Biography</h2>
 <p>
-	I am currently a postgraduate student at <a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. <br>
+	I am a postgraduate student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. <br>
 	<br>
-	My research interests  mainly lie in Computer Vision and Medical Image Analysis.
+	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening.
 
 </p>
 
@@ -78,9 +78,9 @@
 	<tbody>
 	<tr>&nbsp
 </tr>
-    	<tr>&nbspA Context-Guided Attention Method for Integrating Features of Histopathological Patches</tr>
-	<tr>&nbspZhiqun Zuo, Juan Liu, Peng Jiang, Yuqi Chen, Dehua Cao, Baochuan Pang.</tr>
-	<tr>&nbspUnder review in IET Image Processing.</tr>
+    	<tr>&nbspReal-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks</tr>
+	<tr>&nbspPeng Jiang, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.</tr>
+	<tr>&nbspIEEE Access, 2019, ESI Highly Cited Paper.</tr>
 		
     <tr>&nbsp</tr>
     <tr>&nbsp</tr>
