--- a/index.html
+++ b/index.html
@@ -74,29 +74,23 @@
 
 
 <h2>Publications </h2>
-<table id="tbPublications" width="100%">
-	<tbody>
-	<tr>&nbsp
-</tr>
-    	<tr>&nbspReal-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks</tr>
-	<tr>&nbspPeng Jiang, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.</tr>
-	<tr>&nbspIEEE Access, 2019, ESI Highly Cited Paper.</tr>
-		
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-
-	<tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-    <tr>&nbsp</tr>
-
-
-</tbody></table>
+<ul>
+<li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
+    <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li.<br>
+    In submission to <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
+<li>A Context-Guided Attention Method for Integrating Features of Histopathological Patches<br>
+    Zhiqun Zuo, Juan Liu, <b>Peng Jiang</b>, Yuqi Chen, Dehua Cao, Baochuan Pang.<br>
+    Under review in <i>IET Image Processing</i>.<br></li>
+<li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
+    <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
+    Under review in <i>Journal of Digital Imaging</i>.<br></li>
+<li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
+    <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
+    <i>International Conference on Intelligent Computing</i> (ICIC 2022, <b>Oral</b>).<br></li>
+<li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
+    <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
+    <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper</b>.<br>
+</ul>
 
 
 <h2>Projects &amp; Competitions</h2>
