--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     Under review in <i>Journal of Digital Imaging</i>.<br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
-    <i>International Conference on Intelligent Computing</i> (ICIC 2022, <b>Oral</b>).<br></li>
+    <i>International Conference on Intelligent Computing (ICIC 2022, <b>Oral</b>).<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
     <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper</b>.<br>
