--- a/index.html
+++ b/index.html
@@ -60,17 +60,19 @@
 </p>
 
 
-<h2>News</h2>
-<div style="height: 240px; overflow: auto;">
+<h2>Experiences</h2>
 <ul>
-	<li>
-		None.
+	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;Biod Lab, Wuhan University<br>
+	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
 	</li>
-	<li>
-
+	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical Science Hi-Tech Co. Ltd. (Landing Med)<br>
+	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
+	</li>
+	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
+	Research assistant advised by Prof. Bin Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Detection of apple leaf diseases</b>
 	</li>
 </ul>
-</div>
+
 
 
 <h2>Publications </h2>
@@ -85,25 +87,17 @@
 
 
 <h2>Projects &amp; Competitions</h2>
-<table style="border-spacing:2px">
-	
-		<tbody>
-		<tr><td> </td></tr>
-		<tr><td> </td></tr>
-		<tr><td> </td></tr>
-    	<tr><td> </td></tr>
-	</tbody>
-</table>
-
-
-<h2>Experience</h2>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>
-			
-		</tr>
-	</tbody>
-</table>
+<ul>
+	<li>2019.11	&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence Creative Competition<br>
+	<b>Main member</b>, Chinese University Computer Competition, <b>national 2nd prize.</b>
+	</li>
+	<li>2019.04	&nbsp;&nbsp;&nbsp;&nbsp;Image Group: Supernova discovery<br>
+	<b>Captain</b>, 2019 Future Cup AI Challenge, <b>2nd place in northwest region.</b>
+	</li>
+	<li>2018.12	&nbsp;&nbsp;&nbsp;&nbsp;Problem B：Dynamic scheduling strategy of intelligent Rail Guide Vehicle<br>
+	<b>Main member</b>, China Undergraduate Mathematical Contest in Modeling (CUMCM), <b>2nd prize in Shaanxi province.</b>
+	</li>
+</ul>
 
 
 <div id="footer">
