--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <h2>Projects &amp; Competitions</h2>
 <ul>
 	<li>2019.11	&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence Creative Competition<br>
-	<b>Main member</b>, Chinese University Computer Competition, <b>national 2nd prize.</b>
+	<b>Main member</b>, China University Computer Competition, <b>national 2nd prize.</b>
 	</li>
 	<li>2019.04	&nbsp;&nbsp;&nbsp;&nbsp;Image Group: Supernova discovery<br>
 	<b>Captain</b>, 2019 Future Cup AI Challenge, <b>2nd place in northwest region.</b>
