--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 <h2>Projects &amp; Competitions</h2>
 <ul>
 	<li>2019.11	&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence Creative Competition<br>
-	<b>Main member</b>, China University Computer Competition, <b>national 2nd prize.</b>
+	<b>Main member</b>, China University Computer Competition, <b><a href="https://news.nwsuaf.edu.cn/xnxw/93821.htm">national 2nd prize.</a></b>
 	</li>
 	<li>2019.04	&nbsp;&nbsp;&nbsp;&nbsp;Image Group: Supernova discovery<br>
-	<b>Captain</b>, 2019 Future Cup AI Challenge, <b>2nd place in northwest region.</b>
+	<b>Captain</b>, 2019 Future Cup AI Challenge, <b><a href="https://www.ceezz.cn/school_news.php?act=news&mold=info&school_id=788&id=25616">2nd place in northwest region.</a></b>
 	</li>
 	<li>2018.12	&nbsp;&nbsp;&nbsp;&nbsp;Problem B：Dynamic scheduling strategy of intelligent Rail Guide Vehicle<br>
 	<b>Main member</b>, China Undergraduate Mathematical Contest in Modeling (CUMCM), <b>2nd prize in Shaanxi province.</b>
