--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
 <h2>Experiences</h2>
 <ul>
-	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;Biod Lab, Wuhan University<br>
+	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://biod.whu.edu.cn/">Biod Lab, Wuhan University</a><br>
 	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
 	</li>
-	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical Science Hi-Tech Co. Ltd. (Landing Med)<br>
+	<li>2021.05-2022.04&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.landing-med.com/">Wuhan Landing Medical Science Hi-Tech Co. Ltd. (Landing Med)</a><br>
 	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
 	</li>
 	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
@@ -89,13 +89,13 @@
 <h2>Projects &amp; Competitions</h2>
 <ul>
 	<li>2019.11	&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence Creative Competition<br>
-	<b>Main member</b>, China University Computer Competition, <b><a href="https://news.nwsuaf.edu.cn/xnxw/93821.htm">national 2nd prize.</a></b>
+	<b>Main member</b>, China University Computer Competition, <b><a href="https://news.nwsuaf.edu.cn/xnxw/93821.htm">national 2nd prize</a></b>
 	</li>
 	<li>2019.04	&nbsp;&nbsp;&nbsp;&nbsp;Image Group: Supernova discovery<br>
-	<b>Captain</b>, 2019 Future Cup AI Challenge, <b><a href="https://www.ceezz.cn/school_news.php?act=news&mold=info&school_id=788&id=25616">2nd place in northwest region.</a></b>
+	<b>Captain</b>, 2019 Future Cup AI Challenge, <b><a href="https://www.ceezz.cn/school_news.php?act=news&mold=info&school_id=788&id=25616">2nd place in northwest region</a></b>
 	</li>
 	<li>2018.12	&nbsp;&nbsp;&nbsp;&nbsp;Problem B：Dynamic scheduling strategy of intelligent Rail Guide Vehicle<br>
-	<b>Main member</b>, China Undergraduate Mathematical Contest in Modeling (CUMCM), <b>2nd prize in Shaanxi province.</b>
+	<b>Main member</b>, China Undergraduate Mathematical Contest in Modeling (CUMCM), <b>2nd prize in Shaanxi province</b>
 	</li>
 </ul>
 
