--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 
 <h2>Publications </h2>
 <ul>
+<li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
+    <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li.<br>
+    <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
     <i>International Conference on Intelligent Computing (ICIC 2022, <b>Oral</b>).<br></i></li>
