--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h2>Publications </h2>
 <ul>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
-    <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li.<br>
+    <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
     <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
