--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 
 <h2>Publications </h2>
 <ul>
+<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning and Support Vector Machine<br>
+    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Chen Li, Dehua Cao, Baochuan Pang.<br>
+    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
+<li>Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
+    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Lele Li, Wensi Duan, Yu Jin, Dehua Cao, Baochuan Pang.<br>
+    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
+<li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
+    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
+    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
     <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
     <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
