--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 
 <h2>Publications </h2>
 <ul>
+<li>Medical Knowledge Guided Intra-specimen Reference Netwok for Cervical Cell Classification<br>
+    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Hua Chen, Baochuan Pang.<br>
+    In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
 <li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning and Support Vector Machine<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Chen Li, Dehua Cao, Baochuan Pang.<br>
     In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
