--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h2>Publications </h2>
 <ul>
 <li>Medical Knowledge Guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
-    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Hua Chen, Baochuan Pang.<br>
+    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
 <li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning and Support Vector Machine<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Chen Li, Dehua Cao, Baochuan Pang.<br>
