--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 	<p><center>
       	<div id="clustrmaps-widget" style="width:10%">
-		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff&w=a"></script>
+<!-- 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff&w=a"></script> -->
 		</noscript><a href="https://clustrmaps.com/site/1bqin"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff" /></a></noscript>
 	</div>   
 	<br>
