--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div id="toptitle">					
 					<h1>Peng Jiang</h1><h1>
 					<h1>江鹏</h1></div>
-				<h3>Postgraduate Student</h3>
+				<h3>Master degree candidate</h3>
 				<p>
 					School of Computer Science<br>
 					Wuhan University  (武汉大学) <br>
@@ -53,9 +53,10 @@
 
 <h2>Biography</h2>
 <p>
-	I am a postgraduate student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. <br>
+	I am now a master student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. <br>
 	<br>
-	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening.
+	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening
+	and dedicate to incorporating medical domain knowledge with computational cytology.
 
 </p>
 
