--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Peng Jiang, Jiang peng, Xianzhi, Wuhan University, Northwest A&F University"> 
+<meta name="keywords" content="Peng Jiang, Jiang peng, Wuhan University, Northwest A&F University"> 
 <meta name="description" content="Peng Jiang&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Peng Jiang&#39;s Homepage</title>
