--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 
 <h2>Publications </h2>
 <ul>
+<li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
+    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Ynag, Hongyu Dong, Jing Feng.<br>
+    <i>arxiv</i>.<br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
