--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <ul>
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Ynag, Hongyu Dong, Jing Feng.<br>
-    <i><a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844</a></i>.<br></li>
+    <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844</a></i>.<br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
