--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
     In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
+<li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
+    <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
+    Under review in <i>Journal of Digital Imaging</i>(minor revision).<br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
     <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
     <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
