--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am now a master student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. Before that, I received my bachelor degree from Northwest A&F University in 2020.<br>
+	I am now a master student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. Before that, I received my bachelor degree from <a href="https://www.nwsuaf.edu.cn/">Northwest A&F University (NWAFU) </a> in 2020.<br>
 	<br>
 	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening
 	and dedicate to incorporating medical domain knowledge with computational cytology.
