--- a/index.html
+++ b/index.html
@@ -87,15 +87,9 @@
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
-<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning and Support Vector Machine<br>
-    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Chen Li, Dehua Cao, Baochuan Pang.<br>
-    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
-<li>Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
-    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Lele Li, Wensi Duan, Yu Jin, Dehua Cao, Baochuan Pang.<br>
-    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
-    In submission to <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
+    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
     Under review in <i>Journal of Digital Imaging</i> (minor revision).<br></li>
@@ -134,7 +128,7 @@
 	</noscript><a href="https://clustrmaps.com/site/1bqin"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff" /></a></noscript>
 </div>   
 <br>
-        &copy; Peng Jiang | Last updated: Sept. 2022
+        &copy; Peng Jiang | Last updated: Oct. 2022
      
       </center></p>
 
