--- a/index.html
+++ b/index.html
@@ -83,25 +83,28 @@
 <!--     Under review in <i>Artificial Intelligence Review</i>.<br>-->
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
-    <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844</a></i>.<br></li>
+    <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844.</a></i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
-    In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023)</i>.<br></li>
-<li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
+    In submission to <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023).</i><br></li>
+<li>DDN: Dynamic Aggregation Enhanced Dual-stream Network for Medical Image Classification<br>
+    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
+    In submission to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2022).</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
     Under review in <i>Journal of Digital Imaging</i> (minor revision).<br></li>
+<li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
+    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
+    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
     <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
-    <i>International Conference on Neural Information Processing (ICONIP 2022)</i>.<br></li>
+    <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
     <i>International Conference on Intelligent Computing (ICIC 2022, <b>Oral</b>).<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
-    <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper</b>.<br>
+    <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper.</b><br>
 </ul>
 
 
