--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
-<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning and Support Vector Machine<br>
+<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Cheng Li, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine @ Artificial intelligence in pathology (BIBM-W 2022).</i><br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
@@ -104,7 +104,7 @@
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
-    <i>International Conference on Intelligent Computing (ICIC 2022, <b>Oral</b>).<br></i></li>
+    <i>International Conference on Intelligent Computing (ICIC 2022).<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
     <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper.</b><br>
