--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     In submission to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
-    Under review in <i>Journal of Digital Imaging</i> (minor revision).<br></li>
+    <i>Journal of Digital Imaging</i>, accepted.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
