--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <ul>
 <li>A survey on deep learning in automatic cervical cytology screening: from cell identification to whole slide image analysis<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Lang Wang, Hongyu Dong, Lele Li, Wensi Duan, Hua Chen, Yu Jin, Baochuan Pang, Dehua Cao.<br></li> 
-<!--     Under review in <i>Artificial Intelligence Review</i>.<br>-->
+    Under review in <i>Artificial Intelligence Review</i>.<br>
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844.</a></i><br></li>
@@ -92,7 +92,7 @@
     In submission to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
-    <i>Journal of Digital Imaging</i>, accepted.<br></li>
+    <i>Journal of Digital Imaging</i>, 2023.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
@@ -134,7 +134,7 @@
 	</noscript><a href="https://clustrmaps.com/site/1bqin"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff" /></a></noscript>
 </div>   
 <br>
-        &copy; Peng Jiang | Last updated: Oct. 2022
+        &copy; Peng Jiang | Last updated: Jan. 2023
      
       </center></p>
 
