--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844.</a></i><br></li>
-<li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
-    In submission to <i>Asia Pacific Bioinformatics Conference (APBC 2023).</i><br></li>
 <li>DDN: Dynamic Aggregation Enhanced Dual-stream Network for Medical Image Classification<br>
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
     In submission to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
-    IEEE International Symposium on Biomedical Imaging (ISBI 2023), accepted.</i><br></li>
+    <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023), accepted.</i><br></li>
+<li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
+    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
+    <i>Asia Pacific Bioinformatics Conference (APBC 2023), accepted.</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
     <i>Journal of Digital Imaging</i>, 2023.<br></li>
