--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <i>International Conference on Intelligent Computing (ICIC 2022).<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
-    <i>IEEE Access</i>, 2019,  <b>ESI Highly Cited Paper.</b><br>
+    <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper.</b> </font><br>
 </ul>
 
 
