--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844.</a></i><br></li>
+<li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
+    Yuqi Chen, Juan Liu, Zhiqun Zuo, <b>Peng Jiang</b>, Yu Jin, Guangsheng Wu.<br>
+    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
+<li>LGViT: Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
+    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
+    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
 <li>DDN: Dynamic Aggregation Enhanced Dual-stream Network for Medical Image Classification<br>
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
-    In submission to <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
+    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023), accepted.</i><br></li>
