--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     Under review in <i>Artificial Intelligence Review</i>.<br>
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
-    <i>arXiv preprint. <a href="http://arxiv.org/abs/2209.13844">arXiv:2209.13844.</a></i><br></li>
+    In submission to <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023).</i><br></li>
 <li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
     Yuqi Chen, Juan Liu, Zhiqun Zuo, <b>Peng Jiang</b>, Yu Jin, Guangsheng Wu.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
