--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <li>A survey on deep learning in automatic cervical cytology screening: from cell identification to whole slide image analysis<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Lang Wang, Hongyu Dong, Lele Li, Wensi Duan, Hua Chen, Yu Jin, Baochuan Pang, Dehua Cao.<br></li> 
     Under review in <i>Artificial Intelligence Review</i>.<br>
-<li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
+<li>Deeply Supervised Layer Selective Attention Network: Multi-stage Collaborative Attention for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     In submission to <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023).</i><br></li>
 <li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
