--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="./pic/jiangpeng.jpg" border="0" width="200"><br>
+				<img src="./pic/jp2.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
