--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
 <h2>Publications </h2>
 <ul>
-<li>A survey on deep learning in automatic cervical cytology screening: from cell identification to whole slide image analysis<br>
-    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Lang Wang, Hongyu Dong, Lele Li, Wensi Duan, Hua Chen, Yu Jin, Baochuan Pang, Dehua Cao.<br></li> 
+<li>A Survey on Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
+    <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br></li> 
     Under review in <i>Artificial Intelligence Review</i>.<br>
 <li>Deeply Supervised Layer Selective Attention Network: Multi-stage Collaborative Attention for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
