--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
 <li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Cheng Li, Dehua Cao, Baochuan Pang.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine @ Artificial intelligence in pathology (BIBM-W 2022).</i><br></li>
+    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
     <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
