--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <li>DDN: Dynamic Aggregation Enhanced Dual-stream Network for Medical Image Classification<br>
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
-<li>Medical Knowledge guided Intra-Specimen Reference Netwok for Cervical Cell Classification<br>
+<li>Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
     <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023), accepted.</i><br></li>
 <li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
@@ -113,7 +113,7 @@
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
-    <i>International Conference on Intelligent Computing (ICIC 2022).<br></i></li>
+    <i>International Conference on Intelligent Computing (ICIC 2022), <b>oral presentation in Xian, China</b>.<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
     <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper.</b> </font><br>
