--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <i>International Conference on Neural Information Processing (ICONIP 2022).</i><br></li>
 <li>A Novel IoMT System for Pathological Diagnosis based on Intelligent Mobile Scanner and Whole Slide Image Stitching Method<br>
     <b>Peng Jiang</b>, Juan Liu, Di Xiao, Baochuan Pang, Zongjie Hao, Dehua Cao.<br>
-    <i>International Conference on Intelligent Computing (ICIC 2022), <b>oral presentation in Xian, China</b>.<br></i></li>
+    <i>International Conference on Intelligent Computing (ICIC 2022), <b>oral presentation</b> in Xian, China.<br></i></li>
 <li>Real-Time Detection of Apple Leaf Diseases Using Deep Learning Approach Based on Improved Convolutional Neural Networks<br>
     <b>Peng Jiang</b>, Yuehan Chen, Bin Liu, Dongjian He, Chunquan Liang.<br>
     <i>IEEE Access</i>, 2019,  <font color="red"><b>ESI Highly Cited Paper.</b> </font><br>
