--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 	<br>
 	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening
 	and dedicate to incorporating medical domain knowledge with computational cytology.
-
 </p>
 
 
@@ -73,6 +72,33 @@
 	Research assistant advised by Prof. Bin Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Detection of apple leaf diseases</b>
 	</li>
 </ul>
+	
+<h2>News</h2>
+<div style="height: 240px; overflow: auto;">
+<ul>
+	<li>
+		[02/2023] Three paper were accepted by ICASSP 2023.
+	</li>
+	<li>
+		[01/2023] One paper was accepted by ISBI 2023.
+	</li>
+	<li>
+		[01/2023] Two papers were accepted by APBC 2022.
+	</li>
+	<li>
+		[12/2022] One paper was accepted by Journal of Digital Imaging.
+	</li>
+	<li>
+		[10/2022] Four papers were accepted by BIBM 2022.
+	</li>
+	<li>
+		[09/2022] One paper was accepted by ICONIP 2022.
+	</li>
+	<li>
+		[05/2022] One paper was accepted by ICIC 2022.
+	</li>
+</ul>
+</div>
 
 
 
