--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[02/2023] Three paper were accepted by ICASSP 2023.
+		[02/2023] Three papers were accepted by ICASSP 2023.
 	</li>
 	<li>
 		[01/2023] One paper was accepted by ISBI 2023.
