--- a/index.html
+++ b/index.html
@@ -57,17 +57,6 @@
 	<br>
 	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening
 	and dedicate to incorporating medical domain knowledge with computational cytology.
-	<ul>
-	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://biod.whu.edu.cn/">Biod Lab, Wuhan University</a><br>
-	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
-	</li>
-	<li>2021.05-2022.04&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.landing-med.com/">Wuhan Landing Medical Science Hi-Tech Co. Ltd. (Landing Med)</a><br>
-	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
-	</li>
-	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
-	Research assistant advised by Prof. Bin Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Detection of apple leaf diseases</b>
-	</li>
-	</ul>
 </p>
 
 	
@@ -97,7 +86,19 @@
 	</li>
 </ul>
 </div>
-
+	
+<h2>Experiences</h2>
+<ul>
+	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;Biod Lab, Wuhan University<br>
+	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
+	</li>
+	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical Science Hi-Tech Co. Ltd. (Landing Med)<br>
+	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
+	</li>
+	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
+	Research assistant advised by Prof. Bin Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Detection of apple leaf diseases</b>
+	</li>
+</ul>
 
 
 <h2>Publications </h2>
