--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="./pic/jp_half.jpg" border="0" width="250"><br>
+				<img src="./pic/jp_half.jpg" border="0" width="220"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -103,6 +103,9 @@
 
 <h2>Publications </h2>
 <ul>
+<li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
+    Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
+    Under review in <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
 <li>A Survey on Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
     <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br></li> 
     Under review in <i>Artificial Intelligence Review</i>.<br>
