--- a/index.html
+++ b/index.html
@@ -123,15 +123,18 @@
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
-    <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023), accepted.</i><br></li>
+    <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023).</i><br></li>
 <li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
-    <i>Asia Pacific Bioinformatics Conference (APBC 2023), accepted.</i><br></li>
+    <i>Asia Pacific Bioinformatics Conference (APBC 2023).</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
     <i>Journal of Digital Imaging</i>, 2023.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin, Baochuan Pang.<br>
+    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Lang Wang, Baochuan Pang, Dehua Cao.<br>
+    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
+<li>A Context-guided Attention Method for Integrating Features of Histopathological Patches<br>
+    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Jing Feng, Dehua Cao, and Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
 <li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Cheng Li, Dehua Cao, Baochuan Pang.<br>
@@ -171,7 +174,7 @@
 	</noscript><a href="https://clustrmaps.com/site/1bqin"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=t73Jb255uNFBYNS1_Dj1WpW0zKFVLRg1N1Q7Hq_KUNY&cl=ffffff" /></a></noscript>
 </div>   
 <br>
-        &copy; Peng Jiang | Last updated: Feb. 2023
+        &copy; Peng Jiang | Last updated: Apr. 2023
      
       </center></p>
 
