--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     Under review in <i>Artificial Intelligence Review</i>.<br>
 <li>Deeply Supervised Layer Selective Attention Network: Multi-stage Collaborative Attention for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
-    In submission to <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023).</i><br></li>
+    Submitted to <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023).</i><br></li>
 <li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
     Yuqi Chen, Juan Liu, Zhiqun Zuo, <b>Peng Jiang</b>, Yu Jin, Guangsheng Wu.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023), accepted.</i><br></li>
