--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
-    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Jiasheng Liu, Baochuan Pang, Dehua Cao.<br>
+    <b>Peng Jiang</b>, Juan Liu, Yuqi Chen, Hongyu Dong, Hua Chen, Baochuan Pang, Dehua Cao.<br>
     <i>IEEE International Symposium on Biomedical Imaging (ISBI 2023).</i><br></li>
 <li>A novel multilevel iterative training strategy for the ResNet50 based mitotic cell classifier<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Yu Jin.<br>
