--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 <ul>
 <li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
     Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
-    Under review in <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
+    Submitted to <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
 <li>A Survey on Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
     <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br></li> 
     Under review in <i>Artificial Intelligence Review</i>.<br>
-<li>Deeply Supervised Layer Selective Attention Network: Multi-stage Collaborative Attention for Medical Image Classification<br>
+<li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
-    Submitted to <i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 2023).</i><br></li>
+    arXiv preprint arXiv:2209.13844<br></li>
 <li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
     Yuqi Chen, Juan Liu, Zhiqun Zuo, <b>Peng Jiang</b>, Yu Jin, Guangsheng Wu.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
