--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </ul>
 
 
-<h2>Publications </h2>
+<h2>Selected Publications </h2>
 <ul>
 <li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
     Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
@@ -112,13 +112,7 @@
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     arXiv preprint arXiv:2209.13844<br></li>
-<li>Classifying Pathological Images Based on Multi-Instance Learning and End-to-End Attention Pooling<br>
-    Yuqi Chen, Juan Liu, Zhiqun Zuo, <b>Peng Jiang</b>, Yu Jin, Guangsheng Wu.<br>
-    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>LGViT: Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
-    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
-    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
-<li>DDN: Dynamic Aggregation Enhanced Dual-stream Network for Medical Image Classification<br>
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>Medical Knowledge guided Intra-Specimen Reference Network for Cervical Cell Classification<br>
@@ -132,12 +126,6 @@
     <i>Journal of Digital Imaging</i>, 2023.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Lang Wang, Baochuan Pang, Dehua Cao.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
-<li>A Context-guided Attention Method for Integrating Features of Histopathological Patches<br>
-    Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Jing Feng, Dehua Cao, and Baochuan Pang.<br>
-    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
-<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
-   <b>Peng Jiang</b>, Juan Liu, Lang Wang, Yuqi Chen, Cheng Li, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
 <li>Channel Spatial Collaborative Attention Network for Fine-grained Classification of Cervical Cells<br>
     <b>Peng Jiang</b>, Juan Liu, Hua Chen, Cheng Li, Baochuan Pang, Dehua Cao.<br>
