--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     arXiv preprint arXiv:2209.13844<br></li>
+<li>DDN: Dynamic Aggregation Enhanced Dual-Stream Network for Medical Image Classification<br>
+    Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
+    <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
 <li>LGViT: Local-Global Vision Transformer for Breast Cancer Histopathological Image Classification<br>
     Lang Wang, Juan Liu, <b>Peng Jiang</b>, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP 2023).</i><br></li>
