--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
     <i>Journal of Digital Imaging</i>, 2023.<br></li>
+<li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
+    <b>Peng Jiang</b>, Juan Liu, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang.<br>
+    <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
 <li>Predicting Tumor Mutation Burden of TNBC Based on Nuclei Scores of Histopathological Images<br>
     Yuqi Chen, Juan Liu, <b>Peng Jiang</b>, Lang Wang, Baochuan Pang, Dehua Cao.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022).</i><br></li>
