--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[08/2023] One paper was accepted by Artificial Intelligence Review (IF: 12.0).
+	</li>
+	<li>
 		[02/2023] Three papers were accepted by ICASSP 2023.
 	</li>
 	<li>
@@ -73,7 +76,7 @@
 		[01/2023] Two papers were accepted by APBC 2022.
 	</li>
 	<li>
-		[12/2022] One paper was accepted by Journal of Digital Imaging.
+		[12/2022] One paper was accepted by Journal of Digital Imaging (IF: 4.4).
 	</li>
 	<li>
 		[10/2022] Four papers were accepted by BIBM 2022.
@@ -106,9 +109,9 @@
 <li>LGFFNet: Local-Global Features Fusion Network for Radiolucent Jaw Lesions Classification on CBCT Images<br>
     Hua Chen, Juan Liu, Wen Zhang, Zikang Chai, <b>Peng Jiang</b>, Jing Feng, Liang Mao, Zhijun Sun.<br></li> 
     Submitted to <i>Artificial Intelligence in Medicine (AIIM)</i>.<br>
-<li>A Survey on Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
-    <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br></li> 
-    Under review in <i>Artificial Intelligence Review</i>.<br>
+<li>A Systematic Review of Deep Learning-based Cervical Cytology Screening: from Cell Identification to Whole Slide Image Analysis<br>
+    <b>Peng Jiang</b>, Xuekong Li, Hui Shen, Yuqi Chen, Lang Wang, Hua Chen, Jing Feng, Juan Liu.<br>
+    <i>Artificial Intelligence Review (AIR), 2023</i>.<br></li>
 <li>Deeply Supervised Layer Selective Attention Network: Towards Label-Efficient Learning for Medical Image Classification<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Zhihui Yang, Hongyu Dong, Jing Feng.<br>
     arXiv preprint arXiv:2209.13844<br></li>
@@ -126,7 +129,7 @@
     <i>Asia Pacific Bioinformatics Conference (APBC 2023).</i><br></li>
 <li>Development of Automatic Portable Pathology Scanner and Its Evaluation for Clinical Practice<br>
     <b>Peng Jiang</b>, Juan Liu, Qiang Luo, Baochuan Pang, Di Xiao, Dehua Cao.<br>
-    <i>Journal of Digital Imaging</i>, 2023.<br></li>
+    <i>Journal of Digital Imaging (JDI)</i>, 2023.<br></li>
 <li>Classifying Cervical Histopathological Whole Slide Images via Deep Multi-Instance Transfer Learning<br>
     <b>Peng Jiang</b>, Juan Liu, Lang Wang, Jing Feng, Dehua Cao, Baochuan Pang.<br>
     <i>IEEE International Conference on Bioinformatics and Biomedicine (BIBM 2022)</i>.<br></li>
