--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div id="toptitle">					
 					<h1>Peng Jiang</h1><h1>
 					<h1>江鹏</h1></div>
-				<h3>Master degree candidate</h3>
+				<h3>Research Assistant</h3>
 				<p>
 					School of Computer Science<br>
 					Wuhan University  (武汉大学) <br>
@@ -53,9 +53,10 @@
 
 <h2>Biography</h2>
 <p>
-	I am now a master student in School of Computer Science,<a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a>. Before that, I received my bachelor degree from <a href="https://www.nwsuaf.edu.cn/">Northwest A&F University (NWAFU) </a> in 2020.<br>
+	I am now a research assistant in BIOD Lab, School of Computer Science, Wuhan University. I received my master degree from <a href="https://www.whu.edu.cn//">Wuhan University (WHU) </a> in 2023. 
+	Before that, I received my bachelor degree from <a href="https://www.nwsuaf.edu.cn/">Northwest A&F University (NWAFU) </a> in 2020.<br>
 	<br>
-	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening
+	My research interests  mainly lie in Deep Learning, Object Detection and Medical Image Analysis. I am currently studying on automatic cervical cancer screening 
 	and dedicate to incorporating medical domain knowledge with computational cytology.
 </p>
 
@@ -92,10 +93,10 @@
 	
 <h2>Experiences</h2>
 <ul>
-	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp;Biod Lab, Wuhan University<br>
+	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://biod.whu.edu.cn/">Biod Lab</a>, Wuhan University<br>
 	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
 	</li>
-	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical High-Tech Co. Ltd. (Landing Med)<br>
+	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical High-Tech Co. Ltd. (<a href="http://biod.whu.edu.cn/">Landing Med</a>)<br>
 	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
 	</li>
 	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
@@ -153,9 +154,9 @@
 	<li>2019.04	&nbsp;&nbsp;&nbsp;&nbsp;Image Group: Supernova discovery<br>
 	<b>Captain</b>, 2019 Future Cup AI Challenge, <b><a href="https://www.ceezz.cn/school_news.php?act=news&mold=info&school_id=788&id=25616">2nd place in northwest region</a></b>
 	</li>
-	<li>2018.12	&nbsp;&nbsp;&nbsp;&nbsp;Problem B：Dynamic scheduling strategy of intelligent Rail Guide Vehicle<br>
+<!-- 	<li>2018.12	&nbsp;&nbsp;&nbsp;&nbsp;Problem B：Dynamic scheduling strategy of intelligent Rail Guide Vehicle<br>
 	<b>Main member</b>, China Undergraduate Mathematical Contest in Modeling (CUMCM), <b>2nd prize in Shaanxi province</b>
-	</li>
+	</li> -->
 </ul>
 
 
