--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<li>2020.09-Present&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://biod.whu.edu.cn/">Biod Lab</a>, Wuhan University<br>
 	Master student advised by Prof. Juan Liu.&nbsp;&nbsp;&nbsp;&nbsp;Topic:<b> Automatic cervical cancer screening</b>
 	</li>
-	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical High-Tech Co. Ltd. (<a href="http://biod.whu.edu.cn/">Landing Med</a>)<br>
+	<li>2021.05-2022.04	&nbsp;&nbsp;&nbsp;&nbsp;Wuhan Landing Medical High-Tech Co. Ltd. (<a href="https://www.landing-med.com/">Landing Med</a>)<br>
 	Research intern in AI group.&nbsp;&nbsp;&nbsp;&nbsp;Topic: <b>Stitching and registration of whole slide image</b>
 	</li>
 	<li>2018.03-2020.03 &nbsp;&nbsp;&nbsp;&nbsp; Parallel Computing and Visual Processing Lab, Northwest A&F University<br>
